--- a/learning-1/pom.xml
+++ b/learning-1/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>math</artifactId>
+    <artifactId>learning-1</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
