--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>math</module>
+        <module>learning-1</module>
     </modules>
 
     <properties>
